<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator2</string>
    <string name="action_settings">Settings</string>
    <string name="initial_text">0</string>
    <string name="title_btn0">0</string>
    <string name="title_btn1">1</string>
    <string name="title_btn2">2</string>
    <string name="title_btn3">3</string>
    <string name="title_btn4">4</string>
    <string name="title_btn5">5</string>
    <string name="title_btn6">6</string>
    <string name="title_btn7">7</string>
    <string name="title_btn8">8</string>
    <string name="title_btn9">9</string>
    <string name="title_btnDecimal">.</string>
    <string name="title_btnAdd">+</string>
    <string name="title_btnSub">-</string>
    <string name="title_btnDiv">/</string>
    <string name="title_btnProd">X</string>
    <string name="title_btnEquals">=</string>
    <string name="title_btnClear">C</string>
    <string name="title_btnNegate">-</string>
    <string name="title_btnMemadd">M+</string>
    <string name="title_btnMemminus">M-</string>
    <string name="title_btnMemread">MR</string>
    <string name="title_btnMemclear">MC</string>
    <string name="title_btnSquare">x2</string>
    <string name="title_btnSqrt">Sqrt</string>
    <string name="title_btnPwr">n</string>
    <string name="title_btnInv">1/x</string>

</resources>